--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     
     <!-- SEO Penting: Judul yang menargetkan kata kunci produk & jasa -->
     <title>Jual & Pasang AC Gree Jakarta & Bekasi | FRION | Spesialis Gree</title>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C8S5HVTK3C"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-C8S5HVTK3C'); </script>
     
     <!-- SEO Penting: Deskripsi yang menarik dan mengandung kata kunci -->
     <meta name="description" content="FRION adalah spesialis jual dan pasang AC Gree di Jakarta & Bekasi. Dapatkan unit AC Gree original dengan garansi resmi terpanjang dan jasa instalasi profesional. Lihat tipe & harga terbaru.">
